--- a/app/src/main/res/layout/layout_list.xml
+++ b/app/src/main/res/layout/layout_list.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
+    android:padding="16dp"
     android:clipToPadding="false"
     tools:itemcount="5"
     tools:listitem="@layout/item_overview"
