--- a/app/src/main/res/layout/layout_fields.xml
+++ b/app/src/main/res/layout/layout_fields.xml
@@ -15,10 +15,26 @@
         android:showDividers="middle"
         />
 
-    <Button android:id="@+id/save"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Сохранить"
-        />
+        android:orientation="horizontal"
+        >
+
+        <Button android:id="@+id/skip"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Пропустить"
+            />
+
+        <Button android:id="@+id/save"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Сохранить"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
